initial logic for verification

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "@discordjs/rest": "^0.4.1",
     "discord-api-types": "^0.32.1",
     "discord.js": "^13.7.0",
-    "dotenv": "^16.0.0"
+    "dotenv": "^16.0.0",
+    "nodemailer": "^6.7.5"
   },
   "devDependencies": {
     "eslint": "^8.15.0"
