--- a/package.json
+++ b/package.json
@@ -15,10 +15,17 @@
     "nodemailer": "^6.7.5"
   },
   "devDependencies": {
-    "eslint": "^8.15.0"
+    "@types/node": "^17.0.41",
+    "@types/nodemailer": "^6.4.4",
+    "eslint": "^8.15.0",
+    "nodemon": "^2.0.16",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   },
   "scripts": {
     "register": "node deploy-commands.js",
-    "start": "node index.js"
+    "start": "node dist/index.js",
+    "dev": "nodemon index.ts",
+    "build": "tsc -p ."
   }
 }
