--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "repository": "https://github.com/citricacid2/ssmbot.git",
   "author": "citricacid2 <61765149+citricacid2@users.noreply.github.com>",
   "license": "MIT",
+  "type": "module",
   "dependencies": {
     "@discordjs/builders": "^0.13.0",
     "@discordjs/rest": "^0.4.1",
@@ -23,9 +24,9 @@
     "typescript": "^4.7.3"
   },
   "scripts": {
-    "register": "node deploy-commands.js",
+    "register": "node dist/deploy-commands.js",
     "start": "node dist/index.js",
-    "dev": "nodemon index.ts",
+    "dev": "nodemon -e js,ts,json, index.ts",
     "build": "tsc -p ."
   }
 }
