--- a/package.json
+++ b/package.json
@@ -13,15 +13,15 @@
     "discord-api-types": "^0.32.1",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.0",
-    "nodemailer": "^6.7.5"
+    "nodemailer": "^6.7.5",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@types/node": "^17.0.42",
     "@types/nodemailer": "^6.4.4",
     "eslint": "^8.15.0",
     "nodemon": "^2.0.16",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.3"
+    "ts-node": "^10.8.1"
   },
   "scripts": {
     "register": "node dist/deploy-commands.js",
