--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "ts-node": "^10.8.1"
   },
   "scripts": {
-    "register": "node dist/deploy-commands.js",
+    "register": "ts-node deploy-commands.ts",
     "start": "NODE_OPTIONS='--experimental-specifier-resolution=node' node dist/index.js",
     "dev": "nodemon -e js,ts,json, index.ts",
     "build": "tsc -p ."
