--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.0",
     "nodemailer": "^6.7.5",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "@types/node": "^17.0.42",
+    "@types/nodemailer": "^6.4.7"
   },
   "devDependencies": {
-    "@types/node": "^17.0.42",
-    "@types/nodemailer": "^6.4.4",
     "eslint": "^8.15.0",
     "nodemon": "^2.0.16",
     "ts-node": "^10.8.1"
